# veenrokdalv

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
apps/accounts/: admin.py  apps.py  checks.py  exceptions.py  loggers.py  managers.py  models.py  services.py  tests.py  urls.py  utils.py  validators.py
apps/accounts/backends/: auth_backends.py
apps/accounts/forms/: __init__.py  auth_forms.py
apps/accounts/management/commands/: createuser.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/views/: __init__.py  auth_views.py
apps/core/: exceptions.py  models.py  urls.py  views.py
apps/core/api/: pagination.py  urls.py
apps/core/management/commands/: _private.py
apps/core/migrations/: 0001_initial.py
apps/shorter/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/shorter/api/: serializers.py  urls.py  viewsets.py
apps/shorter/migrations/: 0001_initial.py  0002_alter_linkalias_alias.py
config/: settings.py  urls.py
static/accounts/css/: auth.css
templates/shortener/: layout.html  link-alias-create.html
